# ansible-personalpc

./: .gitignore  README.md  activate  ansible-playbook.sh  ansible.cfg  apt.yml  atuin.yml  autogen.sh  awless.yml  awscli.yml  bazelisk.yml  bfg.yml  bootstrap.sh  bwrap.yml  ca-certificates-tweaks.yml  caddy.yml  clang.yml  config.yml  dagger.yml  dconf-restore.yml  docker-compose.yml  docker-distribution.yml  envoy.yml  facts.yml  firefox.yml  freecad.yml  gater.yml  git.yml  github-cli.yml  go-jira.yml  golang.yml  grpccurl.yml  gtk-themes.yml  helm.yml  include.sh  jetbrains-install.yml  jetbrains.yml  keepass.yml  kubebuilder.yml  kubectl.yml  (+30 more)
.autogen.d/: 01virtualenv.sh
.githooks/: pre-commit
files/: .gitignore
files/etc/apt/apt.conf.d/: 30autoproxy.j2
files/home/.config/gtk-3.0/: gtk.css
files/opt/iplists/: README.md
files/usr/local/sbin/: update_adlists.sh
filter_plugins/: map_architecture.py
inventory/group_vars/: all.yml
inventory/group_vars/all/: .gitignore  shared.yml
lookup_plugins/: github_releases.py  jetbrains_product.py  normalize_xml.py
templates/etc/apt/apt.conf.d/: 30autoproxy.j2
templates/etc/default/: localnetwork.j2
templates/home/.gnupg/: gpg.conf
templates/home/.local/share/applications/: jetbrains.desktop
